<resources>

    <string name="app_name">Kusel - Protokolle</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>

    <string name="begehungsprotokoll">Begehungsprotokoll</string>
    <string name="header_information">1. Kopfinformationen</string>
    <string name="projekt">Projekt</string>
    <string name="auftrag">Auftrag</string>
    <string name="adresse">Adresse</string>
    <string name="begeher">Begeher</string>

    <string name="kundeninformationen">2. Kundeninformationen</string>
    <string name="eigent_mer">Eigentümer</string>
    <string name="email">E-Mail</string>
    <string name="ausf_hrungstermin">Ausführungstermin notwendig?</string>
    <string name="ja">Ja</string>
    <string name="nein">Nein</string>
    <string name="ausf_hrungstermin_wann">Wenn Ja, Wann?</string>
    <string name="datum">Datum</string>

    @string/
    <string name="r_umlichkeiten">3. Räumlichkeiten</string>
    <string name="art">Art</string>
    <string name="gewerblich">Gewerblich</string>
    <string name="privat">Privat</string>
    <string name="privat_wenn">Wenn Privat</string>
    <string name="haus_art">Haus-Art</string>
    <string name="einfamilien">Einfamilien Haus</string>
    <string name="mehrfamilien">Mehrfamilien Haus</string>


    <string name="tiefbau">4. Tiefbau</string>
    <string name="notwendig">notwendig?</string>
    <string name="l_nge">Länge</string>


    <string name="bestand">5. Bestand</string>
    <string name="leitungen">Bekannte Leitungswege und / oder andere Hindernisse, welche den geplanten Trassenverlauf stören?</string>
    <string name="leitungen_wenn">Wenn Ja, welche?</string>
    <string name="einf_hrungen">Nutzbare Einführungen</string>
    <string name="sonstige">Sonstige Absprachen</string>


    <string name="unterschriften">6. Unterschriften</string>
    <string name="kunde">Kunde</string>


    <string name="speichern">Speichern</string>
    <string name="l_schen">Löschen</string>
    <string name="welche_leitungswege_hindernisse">Welche Leitungswege / Hindernisse?</string>
    <string name="sind_diese_vollst_ndig">Sind diese vollständig?</string>
    <string name="oberfl_chenart">Oberflächenart</string>
    <string name="ohne_oberfl_che">Ohne Oberfläche</string>
    <string name="m">m</string>
    <string name="pflaster">Pflaster</string>
    <string name="aspahlt">Aspahlt</string>
    <string name="pdf_generieren">PDF Generieren</string>
    <string name="generieren_und_senden">Generieren und Senden</string>


</resources>
