<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="3dp"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/topic3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tiefbau"
                android:textSize="20sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/necessaryLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/necessaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/notwendig"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/necessaryRadios"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/yesTiefbauRadio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ja" />

                        <RadioButton
                            android:id="@+id/noTiefbauRadio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nein"
                            tools:ignore="TouchTargetSizeCheck" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/groundLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/groundText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/oberfl_chenart"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/groundLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/withoutLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <CheckBox
                                android:id="@+id/without"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ohne_oberfl_che" />

                            <LinearLayout
                                android:id="@+id/withoutLayout2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <EditText
                                    android:id="@+id/lengthWithoutInput"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:ems="8"
                                    android:hint="@string/l_nge"
                                    android:inputType="numberDecimal"
                                    android:autofillHints="" />

                                <TextView
                                    android:id="@+id/m1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:text="@string/m"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />

                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/pflasterLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <CheckBox
                                android:id="@+id/pflaster"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pflaster" />


                            <LinearLayout
                                android:id="@+id/pflasterLayout1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <EditText
                                    android:id="@+id/lengthPlasterInput"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:ems="8"
                                    android:layout_weight="1"
                                    android:hint="@string/l_nge"
                                    android:inputType="numberDecimal"
                                    android:importantForAutofill="no" />

                                <TextView
                                    android:id="@+id/m2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:text="@string/m"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/asphaltLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <CheckBox
                                android:id="@+id/asphalt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/aspahlt" />

                            <LinearLayout
                                android:id="@+id/asphaltLayout2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="horizontal">


                                <EditText
                                    android:id="@+id/lengthAsphaltInput"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:ems="8"
                                    android:hint="@string/l_nge"
                                    android:layout_weight="2"
                                    android:inputType="numberDecimal"
                                    android:importantForAutofill="no" />

                                <TextView
                                    android:id="@+id/m3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/m"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />

                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>