<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="3dp"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/kindLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/topic7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2_r_umlichkeiten"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/kindLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/kindText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/art"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/kindRadios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/companyRadio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gewerblich" />

                    <RadioButton
                        android:id="@+id/privatRadio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/privat"
                        tools:ignore="TouchTargetSizeCheck" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wennprivateLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/wennprivateText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Wenn Privat: "
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/privateLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/privateRadios"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Haus-Art:" />

                        <RadioButton
                            android:id="@+id/oneFamilyRadio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Einfamilien Haus" />

                        <RadioButton
                            android:id="@+id/moreFamilyRadio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Mehrfamilien Haus"
                            tools:ignore="TouchTargetSizeCheck" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>